--- a/res/highlight.css
+++ b/res/highlight.css
@@ -8,7 +8,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  color: #333;
+  color: #444;
   background: #f8f8f8;
   -webkit-text-size-adjust: none;
 }
@@ -17,7 +17,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 .diff .hljs-header,
 .hljs-javadoc {
   color: #998;
-  font-style: italic;
+  /*font-style: italic;*/
 }
 
 .hljs-keyword,
@@ -27,8 +27,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 .hljs-subst,
 .hljs-request,
 .hljs-status {
-  color: #333;
-  font-weight: bold;
+  color: black;
 }
 
 .hljs-number,
@@ -49,7 +48,6 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 .hljs-id,
 .scss .hljs-preprocessor {
   color: #900;
-  font-weight: bold;
 }
 
 .hljs-list .hljs-keyword,
@@ -61,8 +59,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 .hljs-type,
 .vhdl .hljs-literal,
 .tex .hljs-command {
-  color: #458;
-  font-weight: bold;
+  color: #479;
 }
 
 .hljs-tag,
@@ -103,8 +100,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 .hljs-doctype,
 .hljs-shebang,
 .hljs-cdata {
-  color: #999;
-  font-weight: bold;
+  color: #163;
 }
 
 .hljs-deletion {
