build_version on resource URLs

--- a/_includes/highlight.html
+++ b/_includes/highlight.html
@@ -10,5 +10,5 @@
     }
   }
 </script>
-<link rel="stylesheet" media="all" href="/res/highlight.css" type="text/css">
-<script async src="/res/highlight.js"></script>
+<link rel="stylesheet" media="all" href="/res/highlight.css?v={{ build_version }}" type="text/css">
+<script async src="/res/highlight.js?v={{ build_version }}"></script>
