--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+{% capture build_version %}{{ site.time | date: "%Y%m%d%H%M%S" }}{% endcapture %}<!DOCTYPE HTML>
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
@@ -8,11 +8,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&amp;subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-    <link rel="stylesheet" media="all" href="/res/screen.css" type="text/css">
+    <link rel="stylesheet" media="all" href="/res/screen.css?v={{ build_version }}" type="text/css">
     <link rel="alternate" type="application/atom+xml" title="Rasmus Andersson" href="/atom.xml">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="icon" type="image/svg+xml" sizes="any" href="/res/icon/icon.svg">
-    <link rel="apple-touch-icon" href="/res/icon/icon-256.png">
+    <link rel="shortcut icon" href="/favicon.ico?v={{ build_version }}">
+    <link rel="icon" type="image/svg+xml" sizes="any" href="/res/icon/icon.svg?v={{ build_version }}">
+    <link rel="apple-touch-icon" href="/res/icon/icon-256.png?v={{ build_version }}">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rsms">
     {% if page.ios_app_name %}
