--- a/res/highlight.css
+++ b/res/highlight.css
@@ -3,10 +3,26 @@
   -webkit-text-size-adjust: none;
 }
 /*.hljs{display:block;background:white;padding:0.5em;color:#333333;overflow-x:auto}*/
-.hljs-comment,.hljs-meta{color:#969896}
-.hljs-string,.hljs-variable,.hljs-template-variable,.hljs-strong,.hljs-emphasis,.hljs-quote{color:#183691}
-.hljs-keyword,.hljs-selector-tag,.hljs-type{color:#a71d5d}
+.hljs-comment,
+.hljs-meta {
+  color:#969896
+}
 
+.hljs-string,
+.hljs-variable,
+.hljs-template-variable,
+.hljs-strong,
+.hljs-emphasis,
+.hljs-quote {
+  color:#183691
+}
+
+.hljs-keyword,
+.hljs-selector-tag {
+  color:#a71d5d
+}
+
+.hljs-number,
 .hljs-literal,
 .hljs-symbol,
 .hljs-bullet,
@@ -15,38 +31,29 @@
   color:#046
 }
 
-.hljs-section,.hljs-name{color:#63a35c}
-.hljs-tag{color:#333333}
-.hljs-title,.hljs-attr,.hljs-selector-id,.hljs-selector-class,.hljs-selector-attr,.hljs-selector-pseudo{color:#795da3}
+.hljs-section,
+.hljs-name{
+  color:#63a35c
+}
+
+.hljs-tag{
+  color:#333333
+}
+
+.hljs-title,
+.hljs-attr,
+.hljs-selector-id,
+.hljs-selector-class,
+.hljs-selector-attr,
+.hljs-selector-pseudo,
+.hljs-type { 
+  color:#795da3
+}
+
+.hljs-built_in {
+  color:#0086b3
+}
+
 .hljs-addition{color:#55a532;background-color:#eaffea}
 .hljs-deletion{color:#bd2c00;background-color:#ffecec}
 .hljs-link{text-decoration:underline}
-
-/* GitHub gist colors
-.pl-c{color:#969896}
-.pl-c1,.pl-s .pl-v{color:#0086b3}
-.pl-e,.pl-en{color:#795da3}
-.pl-smi,.pl-s .pl-s1{color:#333}
-.pl-ent{color:#63a35c}
-.pl-k{color:#a71d5d}
-.pl-s,.pl-pds,.pl-s .pl-pse .pl-s1,.pl-sr,.pl-sr .pl-cce,.pl-sr .pl-sre,.pl-sr .pl-sra{color:#183691}
-.pl-v,.pl-smw{color:#ed6a43}
-.pl-bu{color:#b52a1d}
-.pl-ii{color:#f8f8f8;background-color:#b52a1d}
-.pl-c2{color:#f8f8f8;background-color:#b52a1d}
-.pl-c2::before{content:"^M"}
-.pl-sr .pl-cce{font-weight:bold;color:#63a35c}
-.pl-ml{color:#693a17}
-.pl-mh,.pl-mh .pl-en,.pl-ms{font-weight:bold;color:#1d3e81}
-.pl-mq{color:#008080}
-.pl-mi{font-style:italic;color:#333}
-.pl-mb{font-weight:bold;color:#333}
-.pl-md{color:#bd2c00;background-color:#ffecec}
-.pl-mi1{color:#55a532;background-color:#eaffea}
-.pl-mc{color:#ef9700;background-color:#ffe3b4}
-.pl-mi2{color:#d8d8d8;background-color:#808080}
-.pl-mdr{font-weight:bold;color:#795da3}
-.pl-mo{color:#1d3e81}
-.pl-ba{color:#595e62}
-.pl-sg{color:#c0c0c0}
-.pl-corl{text-decoration:underline;color:#183691}*/
