Introduction to WebAssembly post

--- a/_includes/highlight.html
+++ b/_includes/highlight.html
@@ -8,6 +8,7 @@
         cn.className = 'nohighlight';
       }
     }
+    n.id = 'snippet-' + i
   }
 </script>
 <link rel="stylesheet" media="all" href="/res/highlight.css?v={{ build_version }}" type="text/css">
