--- a/res/screen.css
+++ b/res/screen.css
@@ -17,6 +17,7 @@ body {
   -ms-text-size-adjust: 100%;
   font-smoothing: subpixel-antialiased; -webkit-font-smoothing: subpixel-antialiased;
   -webkit-overflow-scrolling: touch;
+  scroll-behavior: smooth;
 
   text-rendering: optimizeLegibility;
   text-rendering: geometricPrecision;
@@ -44,8 +45,6 @@ h1,h2,h3,h4,h5,h6 {
   color: #040404;
   margin: 1.618em 0 0.7em 0;
   /*-webkit-font-smoothing: antialiased;*/
-  text-rendering: optimizeLegibility;
-  text-rendering: geometricPrecision;
 }
 h1 { font-size: 28px; }
 h2 { font-size: 24px; }
@@ -54,7 +53,7 @@ h3 { font-size: 18px; }
 h4, h5, h6 { font-size: 16px; margin:1em 0 -0.2em 0; }
 
 /* anchors */
-a {
+a[href] {
   color: inherit;
   text-decoration: none;
   /*display: inline-block;*/
@@ -69,10 +68,20 @@ a {
     -1px 1px 0 #fff,
      1px 1px 0 #fff;
 }
-a:hover {
+a[href^="#"] {
+  background: inherit;
+  text-shadow: none;
+  border-bottom: 1px dotted rgba(0,0,0,0.1);
+}
+a[href]:hover {
   color: #000;
   background-image: linear-gradient(to bottom, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 50%);
 }
+a[href^="#"]:hover {
+  background: inherit;
+  border-color: black;
+}
+
 
 a.img { border:none; background:transparent !important; }
 
@@ -121,21 +130,21 @@ header * {
     flex-direction: column;
     justify-content: center;
   }
-  header a {
+  header a[href] {
     color: inherit;
     background: none;
     text-shadow: none;
   }
-  header a:hover {
+  header a[href]:hover {
     color: black;
     background: none;
   }
-    header h1 a {
+    header h1 a[href] {
       display: block;
       transform: translate3d(0,0,0); -webkit-transform: translate3d(0,0,0);
-      transition: 160ms -webkit-transform ease-out; -webkit-transition: 160ms -webkit-transform ease-out;
+      transition: 160ms transform ease-out; -webkit-transition: 160ms -webkit-transform ease-out;
     }
-    header h1 a:hover {
+    header h1 a[href]:hover {
       transform: translate3d(0,2px,0); -webkit-transform: translate3d(0,2px,0);
       cursor:pointer;
     }
@@ -161,7 +170,7 @@ header * {
     justify-content: center;
   }
   header ul li:first-child { margin-left: 0; }
-  header ul li a {
+  header ul li a[href] {
     /*background: rgba(255,60,90,0.3);*/
     cursor: pointer;
     padding: 0 0.8em;
@@ -170,11 +179,11 @@ header * {
     text-rendering: optimizeLegibility;
     text-rendering: geometricPrecision;
   }
-  header ul li:last-child a {
+  header ul li:last-child a[href] {
     padding-right:0;
   }
-  header ul li a:hover { color: black; text-decoration: none; }
-  header ul li a.active {
+  header ul li a[href]:hover { color: black; text-decoration: none; }
+  header ul li a[href].active {
     /*font-weight:bold;*/
     color:black;
   }
@@ -234,7 +243,7 @@ div.content.photo {
   }
   
   div.content code {
-    padding:0.2em 0;
+    padding:3px 0;
   }
   div.content code::before,
   div.content code::after {
@@ -252,9 +261,67 @@ div.content.photo {
     letter-spacing: inherit;
     content: none;
   }
-  div.content *:target { background:#fe0; }
-  div.content sup:target a { padding:2px 5px; }
+  @keyframes outline-fade-out {
+    0%   { background-color: #fe0; outline-color: #fe0; }
+    90%   { background-color: #fe0; outline-color: #fe0; }
+    100% {
+      background-color: default;
+      outline-color: rgba(255,255,255,0);
+    }
+  }
+  div.content *:target {
+    outline: 4px solid #fe0;
+    animation: outline-fade-out 4500ms 1;
+    animation-direction: alternate; /* or: normal */
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+    animation-delay: 0;
+  }
+  div.content center {
+    margin:2em 0;
+    user-select:none;
+    cursor: default;
+    color: #ccc;
+  }
+  div.content a.footnote {
+    display: inline-block;
+    padding: 0 1px;
+    margin: 0 0 0 1px;
+    background: inherit;
+    text-shadow:none;
+    color: #666;
+    user-select: none;
+    border-radius: 2px;
+    border-left:1px solid rgba(0,0,0,0.1);
+    border-right:1px solid rgba(0,0,0,0.1);
+  }
+  div.content sup {
+    vertical-align: super;
+    font-size: 65%;
+    padding:0;
+    margin:0;
+  }
+  div.content sup:target {
+    background: none;
+    animation: none;
+    outline: none;
+  }
+  div.content sup:target a.footnote {
+    background-color: #fe0;
+  }
+  div.content a.footnote:hover {
+    color: black;
+    background: #eee;
+    /*text-decoration: underline;*/
+  }
+  div.content a.footnote::before { letter-spacing: -0.3em; content: "\00a0"; }
+  div.content a.footnote::after { letter-spacing: -0.3em; content: "\00a0"; }
+  div.content div.footnotes {
+    margin-top:3em;
+    border-top: 1px solid #eee;
+  }
   div.content div.footnotes li { color:#999; }
+  div.content div.footnotes li > p { margin:0; }
   div.content div.footnotes li:target { background:#ffc; color:inherit; }
   
 
