simple changes to default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,9 +46,9 @@
     {% endif %}
     {% endif %}
     <meta property="og:url" content="https://rsms.me{{ page.url | remove_first:'index.html' }}">
-    <meta property="og:site_name" content="rsms.me">
+    <meta property="og:site_name" content="nickuhlig.github.io">
     <meta property="og:type" content="article">
-    <meta property="og:locale" content="en_GB" />
+    <meta property="og:locale" content="en_CA" />
     {% if page.date %}
     <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}">
     {% endif %}
@@ -70,7 +70,18 @@
     {% unless page.no_footer %}
     <footer>
       <p>
-        This content is licensed under <a rel="license" href="https://creativecommons.org/licenses/by/3.0/deed">CC BY 3.0</a>
+       <a href="https://www.facebook.com/audiologist.wastebasket">
+						<img src="https://raw.githubusercontent.com/nickuhlig/nickuhlig.github.io/master/_layouts/facebook.png" alt="Facebook">
+					</a>
+					<a href="https://twitter.com/plcthe">
+						<img src="https://raw.githubusercontent.com/nickuhlig/nickuhlig.github.io/master/_layouts/twitter.png" alt="Twitter">
+					</a>
+					<a href="https://www.instagram.com/theplc/">
+						<img src="https://raw.githubusercontent.com/nickuhlig/nickuhlig.github.io/master/_layouts/insta.png" alt="Instagram">
+					</a>
+					<a href="https://www.linkedin.com/in/nickuhlig/">
+						<img src="https://raw.githubusercontent.com/nickuhlig/nickuhlig.github.io/master/_layouts/linkedin.png" alt="LinkedIn">
+					</a>
       </p>
     </footer>
     {% endunless %}
