--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,14 +45,13 @@
     <meta name="twitter:image" content="{{ page.og_image_url }}">
     {% endif %}
     {% endif %}
-    <meta property="og:url" content="https://rsms.me{{ page.url | remove_first:'index.html' }}">
+    <meta property="og:url" content="https://nickuhlig.github.io{{ page.url | remove_first:'index.html' }}">
     <meta property="og:site_name" content="nickuhlig.github.io">
     <meta property="og:type" content="article">
     <meta property="og:locale" content="en_CA" />
     {% if page.date %}
     <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}">
     {% endif %}
-    <script>window.initFuncs = [];</script>
   </head>
   <body{% if page.wide_layout %} class="wide"{% endif %}>
     <header{% unless page.date %} class="main"{% endunless %}>
@@ -71,16 +70,16 @@
     <footer>
       <p>
        <a href="https://www.facebook.com/audiologist.wastebasket">
-						<img src="https://raw.githubusercontent.com/nickuhlig/nickuhlig.github.io/master/_layouts/facebook.png" alt="Facebook">
+						<img src="/res/facebook.png" alt="Facebook">
 					</a>
 					<a href="https://twitter.com/plcthe">
-						<img src="https://raw.githubusercontent.com/nickuhlig/nickuhlig.github.io/master/_layouts/twitter.png" alt="Twitter">
+						<img src="/res/twitter.png" alt="Twitter">
 					</a>
 					<a href="https://www.instagram.com/theplc/">
-						<img src="https://raw.githubusercontent.com/nickuhlig/nickuhlig.github.io/master/_layouts/insta.png" alt="Instagram">
+						<img src="/res/insta.png" alt="Instagram">
 					</a>
 					<a href="https://www.linkedin.com/in/nickuhlig/">
-						<img src="https://raw.githubusercontent.com/nickuhlig/nickuhlig.github.io/master/_layouts/linkedin.png" alt="LinkedIn">
+						<img src="/res/linkedin.png" alt="LinkedIn">
 					</a>
       </p>
     </footer>
@@ -88,6 +87,5 @@
     
     {% include highlight.html %}
     {% include analytics.html %}
-    <script>for (var k in window.initFuncs) { window.initFuncs[k](); } delete window.initFuncs;</script>
   </body>
 </html>
