--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,10 +57,11 @@
     <header{% unless page.date %} class="main"{% endunless %}>
       <h1 class="logo"><a href="/"><img src="/res/icon/icon.svg" width="32" height="32"></a></h1>
       <ul class="navigation">
-        <li><a href="//rsms.tumblr.com/" title="A selection of recent photography">Photography</a></li>
-        <li><a href="/projects/"{% if page.url contains "/projects/" %}class="active"{% endif %} title="Projects I am or was involved in">Projects</a></li>
-        <!-- <li><a href="/archive/"{% if page.url contains "/archive/" %}class="active"{% endif %} title="Archived articles">Archive</a></li> -->
+        <!-- <li><a href="//perjuhlig.tumblr.com/" title="My wedding website">Another thing I did</a></li> -->
         <li><a href="/about/"{% if page.url contains "/about/" %}class="active"{% endif %}>About me</a></li>
+	<li><a href="/projects/"{% if page.url contains "/projects/" %}class="active"{% endif %} title="Projects I am or was involved in">Projects</a></li>
+        <!-- <li><a href="/archive/"{% if page.url contains "/archive/" %}class="active"{% endif %} title="Archived articles">Archive</a></li> -->
+	<li><a href="mailto:nickuhlig@gmail.com">Contact me</a></li>
       </ul>
     </header>
 
@@ -69,18 +70,10 @@
     {% unless page.no_footer %}
     <footer>
       <p>
-       <a href="https://www.facebook.com/audiologist.wastebasket">
-						<img src="/res/facebook.png" alt="Facebook">
-					</a>
-					<a href="https://twitter.com/plcthe">
-						<img src="/res/twitter.png" alt="Twitter">
-					</a>
-					<a href="https://www.instagram.com/theplc/">
-						<img src="/res/insta.png" alt="Instagram">
-					</a>
-					<a href="https://www.linkedin.com/in/nickuhlig/">
-						<img src="/res/linkedin.png" alt="LinkedIn">
-					</a>
+	<a href="https://www.facebook.com/gilhukcin"><img src="/res/facebook.svg" alt="Facebook"></a>
+	<a href="https://twitter.com/plcthe"><img src="/res/twitter.svg" alt="Twitter"></a>
+	<a href="https://www.instagram.com/theplc/"><img src="/res/insta.svg" alt="Instagram"></a>
+	<a href="https://www.linkedin.com/in/nickuhlig/"><img src="/res/linkedin.svg" alt="LinkedIn"></a>
       </p>
     </footer>
     {% endunless %}
