--- a/res/screen.css
+++ b/res/screen.css
@@ -2,6 +2,12 @@
   width: device-width;
 }
 
+
+@font-face {
+  font-family: 'ITCAvantGardePro-Bold';
+  src: url('TorontoSubway.eot?') format('eot'), url('TorontoSubway.woff') format('woff'), url('TorontoSubway.ttf') format('truetype');
+}
+
 * { margin:0; padding:0; font-family:inherit; }
 body {
   background: #fff;
@@ -58,28 +64,32 @@ a[href] {
   text-decoration: none;
   /*display: inline-block;*/
   padding-bottom:0.025em;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,.5) 50%, rgba(0,0,0,0) 50%);
-  background-repeat: repeat-x;
-  background-size: 2px .1em;
-  background-position: 0 1.025em;
-  text-shadow: /* creates "openings" for descenders in the underline */
-   -1px -1px 0 #fff,
-    1px -1px 0 #fff,
-    -1px 1px 0 #fff,
-     1px 1px 0 #fff;
+   -o-transition:.5s;
+   -ms-transition:.5s;
+   -moz-transition:.5s;
+   -webkit-transition:.5s;
+  /* ...and now for the proper property */
+  transition:.5s;
 }
 a[href^="#"] {
-  background: inherit;
-  text-shadow: none;
-  border-bottom: 1px dotted rgba(0,0,0,0.1);
+  color: inherit;
+  text-decoration: none;
+  /*display: inline-block;*/
+  padding-bottom:0.025em;
+   -o-transition:.5s;
+   -ms-transition:.5s;
+   -moz-transition:.5s;
+   -webkit-transition:.5s;
+  /* ...and now for the proper property */
+  transition:.5s;
 }
+
 a[href]:hover {
-  color: #000;
-  background-image: linear-gradient(to bottom, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 50%);
+  color: #c0c0c0;
 }
+
 a[href^="#"]:hover {
-  background: inherit;
-  border-color: black;
+  color: #c0c0c0;
 }
 
 
