added ITC AVant Garde pro to font face

--- a/res/screen.css
+++ b/res/screen.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: 'ITCAvantGardePro-Bold';
-  src: url('TorontoSubway.eot?') format('eot'), url('TorontoSubway.woff') format('woff'), url('TorontoSubway.ttf') format('truetype');
+  src: url('ITCAvantGardePro-Bold.woff') format('woff'), url('ITCAvantGardePro-Bold.ttf') format('truetype'), url('ITCAvantGardePro-Bold.otf') format('opentype');
 }
 
 * { margin:0; padding:0; font-family:inherit; }
