changed heading typeface
to ITC Avant Garde Pro Bold

--- a/res/screen.css
+++ b/res/screen.css
@@ -46,7 +46,7 @@ hr { height:1px; border:none; background-color:#ddd; }
 
 /* headings */
 h1,h2,h3,h4,h5,h6 {
-  font-family: 'Roboto Condensed', helvetica, sans-serif;
+  font-family: 'ITCAvantGardePro-Bold', helvetica, sans-serif;
   font-weight:400;
   color: #040404;
   margin: 1.618em 0 0.7em 0;
