--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,12 +55,13 @@
   </head>
   <body{% if page.wide_layout %} class="wide"{% endif %}>
     <header{% unless page.date %} class="main"{% endunless %}>
-      <h1 class="logo"><a href="/"><img src="/res/icon/icon.svg" width="32" height="32"></a></h1>
+      <h1 class="logo"><a href="/">NICK UHLIG</a></h1>
       <ul class="navigation">
         <!-- <li><a href="//perjuhlig.tumblr.com/" title="My wedding website">Another thing I did</a></li> -->
         <li><a href="/about/"{% if page.url contains "/about/" %}class="active"{% endif %}>About me</a></li>
 	<li><a href="/projects/"{% if page.url contains "/projects/" %}class="active"{% endif %} title="Projects I am or was involved in">Projects</a></li>
         <!-- <li><a href="/archive/"{% if page.url contains "/archive/" %}class="active"{% endif %} title="Archived articles">Archive</a></li> -->
+	<li><a href="/cv/">C.V.</a></li>
 	<li><a href="mailto:nickuhlig@gmail.com">Contact me</a></li>
       </ul>
     </header>
