--- a/res/screen.css
+++ b/res/screen.css
@@ -116,24 +116,11 @@ header {
 }
 header * {
   cursor: default;
-  font-size:12px;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif,
-    "Apple Color Emoji",
-    "Segoe UI Emoji",
-    "Segoe UI Symbol";
 }
   header h1 {
     /*background: lightblue;*/
+    font-family: 'ITCAvantGardePro-Bold';
+    font-size:24px
     flex: 0 0 auto;
     margin: 0;
     display: flex;
@@ -162,6 +149,21 @@ header * {
 
   header ul {
     /*background: rgba(0,255,190,0.3);*/
+    font-size:12px;
+    font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol";
     flex: 0 0 auto;
     margin: 0;
     text-align: left;
