added font family inherit back in

--- a/res/screen.css
+++ b/res/screen.css
@@ -8,7 +8,7 @@
   src: url('ITCAvantGardePro-Bold.woff') format('woff'), url('ITCAvantGardePro-Bold.ttf') format('truetype'), url('ITCAvantGardePro-Bold.otf') format('opentype');
 }
 
-* { margin:0; padding:0;}
+* { margin:0; padding:0; font-family:inherit;}
 body {
   background: #fff;
   color: #222;
