--- a/res/screen.css
+++ b/res/screen.css
@@ -54,9 +54,8 @@ h1,h2,h3,h4,h5,h6 {
 }
 h1 { font-size: 28px; }
 h2 { font-size: 24px; }
-h3, h4, h5, h6 { font-family:inherit; font-weight:700; }
-h3 { font-size: 18px; }
-h4, h5, h6 { font-size: 16px; margin:1em 0 -0.2em 0; }
+h3 { font-size: 18px; color: #282828}
+h4, h5, h6 { font-size: 16px; margin:1em 0 -0.2em 0; color: #686868}
 
 /* anchors */
 a[href] {
