--- a/res/screen.css
+++ b/res/screen.css
@@ -204,7 +204,7 @@ header * {
   header ul li:first-child { margin-left: 0; }
   header ul li a[href] {
     /*background: rgba(255,60,90,0.3);*/
-    cursor: pointer;
+    cursor: default;
     padding: 0 0.8em;
     color: #aaa;
     text-decoration: none;
