--- a/res/screen.css
+++ b/res/screen.css
@@ -151,6 +151,7 @@ header * {
   }
   header a[href]:hover {
     color: #c0c0c0;
+    cursor: default;
   }
     header h1 a[href] {
       display: block;
