--- a/res/screen.css
+++ b/res/screen.css
@@ -164,7 +164,7 @@ header * {
     }
 
     header h1 a[href]:hover {
-      color: #c0c0c0
+      color: #c0c0c0;
     }
     header h1 img { display:block; }
 
