--- a/res/screen.css
+++ b/res/screen.css
@@ -152,19 +152,19 @@ header * {
     color: #c0c0c0;
     cursor: pointer;
   }
-    header h1 a[href] {
+    /*header h1 a[href] {
       display: block;
        -o-transition:.5s;
        -ms-transition:.5s;
        -moz-transition:.5s;
        -webkit-transition:.5s;
-       /* ...and now for the proper property */
+        ...and now for the proper property
        transition:.5s;
-    }
+    }*/
 
-    header h1 a[href]:hover {
+    /*header h1 a[href]:hover {
       color: #c0c0c0;
-    }
+    }*/
     header h1 img { display:block; }
 
   header ul {
