--- a/res/screen.css
+++ b/res/screen.css
@@ -72,10 +72,20 @@ h4, h5, h6 { font-size: 16px; margin:1em 0 -0.2em 0; color: #686868}
 
 /* anchors */
 a[href] {
-  color: inherit;
+color: inherit;
   text-decoration: none;
   /*display: inline-block;*/
   padding-bottom:0.025em;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,.5) 50%, rgba(0,0,0,0) 50%);
+  background-repeat: repeat-x;
+  background-size: 2px .1em;
+  background-position: 0 1.025em;
+  text-shadow: /* creates "openings" for descenders in the underline */
+   -1px -1px 0 #fff,
+    1px -1px 0 #fff,
+    -1px 1px 0 #fff,
+     1px 1px 0 #fff;
+  /*here ends rasmus' code, the following is the fade to a lighter colour*/
    -o-transition:.5s;
    -ms-transition:.5s;
    -moz-transition:.5s;
@@ -83,6 +93,7 @@ a[href] {
   /* ...and now for the proper property */
   transition:.5s;
 }
+
 a[href^="#"] {
   color: inherit;
   text-decoration: none;
