fixed bad img tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
     {% unless page.no_footer %}
     <footer>
       <p>
-	<a href="https://plus.google.com/+NickUhlig"><img src]"/res/google.svg" alt="Google+"></a>
+	<a href="https://plus.google.com/+NickUhlig"><img src="/res/google.svg" alt="Google+"></a>
 	<a href="https://www.facebook.com/gilhukcin"><img src="/res/facebook.svg" alt="Facebook"></a>
 	<a href="https://twitter.com/plcthe"><img src="/res/twitter.svg" alt="Twitter"></a>
 	<a href="https://www.instagram.com/theplc/"><img src="/res/insta.svg" alt="Instagram"></a>
