--- a/res/screen.css
+++ b/res/screen.css
@@ -473,6 +473,8 @@ footer {
   }
   footer a {
     color: #333;
+    background: none;
+    text-shadow: none;
     opacity: 0.5;
   }
   footer a:hover {
