--- a/res/screen.css
+++ b/res/screen.css
@@ -474,6 +474,8 @@ footer {
   footer a {
     color: #333;
     background: none;
+    background-image: none;
+    text-decoration: none;
     text-shadow: none;
     opacity: 0.5;
   }
