--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
         <li><a href="/about/"{% if page.url contains "/about/" %}class="active"{% endif %}>About</a></li>
 	<li><a href="/projects/"{% if page.url contains "/projects/" %}class="active"{% endif %} title="Projects I am or was involved in">Projects</a></li>
         <!-- <li><a href="/archive/"{% if page.url contains "/archive/" %}class="active"{% endif %} title="Archived articles">Archive</a></li> -->
-	<li><a href="/cv/">C.V.</a></li>
+	<li><a href="/cv/"{% if page.url contains "/cv/" %}class="active"{% endif %}>C.V.</a></li>
 	<li><a href="mailto:nickuhlig@gmail.com">Contact</a></li>
       </ul>
     </header>
