--- a/res/screen.css
+++ b/res/screen.css
@@ -458,8 +458,10 @@ div.meta { margin:1em 0; }
   }
 
 footer {
-  color:#ccc;
+  background-color:#fff;
   display: block;
+  position: absolute;
+  bottom: 0;
   padding:0 0 1em 0;
   /*text-align: center;*/
 }
