--- a/res/screen.css
+++ b/res/screen.css
@@ -458,10 +458,8 @@ div.meta { margin:1em 0; }
   }
 
 footer {
-  background-color:#fff;
+  color: #ccc;
   display: block;
-  position: absolute;
-  bottom: 0;
   padding:0 0 1em 0;
   /*text-align: center;*/
 }
