--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&amp;subset=latin-ext" rel="stylesheet">
-    <link href="https://fonts.google.com/specimen/Space+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link rel="stylesheet" media="all" href="/res/screen.css?v={{ build_version }}" type="text/css">
     <link rel="alternate" type="application/atom+xml" title="Rasmus Andersson" href="/atom.xml">
     <link rel="shortcut icon" href="/res/platonics/tetrahedron.ico?v={{ build_version }}">
