changed back to inconsolata

--- a/res/screen.css
+++ b/res/screen.css
@@ -12,7 +12,7 @@
 body {
   background: #fff;
   color: #222;
-  font-family: 'Space Mono', Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-family: Inconsolata, Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-size:16px;
   line-height:1.5;
 
