--- a/res/screen.css
+++ b/res/screen.css
@@ -12,8 +12,8 @@
 body {
   background: #fff;
   color: #222;
-  font-family: Inconsolata, Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  font-size:16px;
+  font-family: 'Space Mono', Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-size:14px;
   line-height:1.5;
 
   width: 100%;
