added javascript thingy
for random images in made in canada page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,17 @@
     {% if page.date %}
     <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}">
     {% endif %}
+	<script type="text/javascript">
+		var random_images_array = ['farine5roses_1.jpg', 'lynncanyon_1.jpg', 'maligne_1.jpg', 'nipekamewriversaskatchewan_1.jpg', 'openicenunavut_1.jpg', 'torontoskyline_1.jpg', 'woodbinehotelwinnipeg_1.jpg'];
+
+		function getRandomImage(imgAr, path) {
+		path = path || '/res/'; // default path here
+		var num = Math.floor( Math.random() * imgAr.length );
+		var img = imgAr[ num ];
+		var imgStr = '<img src="' + path + img + '" alt = "">';
+		document.write(imgStr); document.close();
+							}
+	</script>
   </head>
   <body{% if page.wide_layout %} class="wide"{% endif %}>
     <header{% unless page.date %} class="main"{% endunless %}>
