--- a/res/screen.css
+++ b/res/screen.css
@@ -57,7 +57,7 @@ pre, code, tt {
 
 img { border:none; vertical-align:bottom; }
 
-img.inlineblock (display:inline-block; vertical-align:middle; }
+img.inlineblock { display:inline-block; vertical-align:middle; }
 
 hr { height:1px; border:none; background-color:#ddd; }
 
