--- a/res/screen.css
+++ b/res/screen.css
@@ -380,7 +380,7 @@ img.profile-picture {
 }
 
 img.inline { 
-   display:inline-block; 
+   display:inline; 
    margin-left: auto;
    margin-right: auto;
    text-align:center; 
