--- a/res/screen.css
+++ b/res/screen.css
@@ -4,8 +4,8 @@
 
 
 @font-face {
-  font-family: 'ITCAvantGardePro-Bold';
-  src: url('ITCAvantGardePro-Bold.woff') format('woff'), url('ITCAvantGardePro-Bold.ttf') format('truetype'), url('ITCAvantGardePro-Bold.otf') format('opentype');
+  font-family: 'Radikal-Black';
+  src: url('Radikal-Black.woff') format('woff'), url('Radikal-Black.ttf') format('truetype'), url('radikal-black.otf') format('opentype'), url('Radikal-Black.eot') format('eot');
 }
 
 * { margin:0; padding:0; font-family:inherit;}
