--- a/res/screen.css
+++ b/res/screen.css
@@ -61,7 +61,7 @@ hr { height:1px; border:none; background-color:#ddd; }
 
 /* headings */
 h1,h2,h3,h4,h5,h6 {
-  font-family: 'ITCAvantGardePro-Bold';
+  font-family: 'Radikal-Black';
   font-weight:400;
   color: #040404;
   margin: 1.618em 0 0.7em 0;
