--- a/res/screen.css
+++ b/res/screen.css
@@ -142,7 +142,7 @@ header * {
   cursor: default;
 }
   header h1 {
-    font-family: 'ITCAvantGardePro-Bold';
+    font-family: 'Radikal-Black';
     font-size:28px
     flex: 0 0 auto;
     margin: 0;
@@ -162,7 +162,7 @@ header * {
   transition:.5s;
   }
   header a[href]:hover {
-    color: #c0c0c0;
+    color: #FF0000;
     cursor: pointer;
   }
     /*header h1 a[href] {
