--- a/res/screen.css
+++ b/res/screen.css
@@ -147,7 +147,7 @@ header * {
   cursor: default;
 }
   header h1 {
-    font-family: 'Radikal-Black';
+    font-family: 'ITCAvantGardePro-Bold';
     font-size:28px
     flex: 0 0 auto;
     margin: 0;
