--- a/res/screen.css
+++ b/res/screen.css
@@ -9,8 +9,8 @@
 }
 
 @font-face {
-  font-family: 'RepilicaStd-Regular';
-  src: url('RepilicaStd-Regular.woff') format('woff'), url('RepilicaStd-Regular.ttf') format('truetype'), url('RepilicaStd-Regular.otf') format('opentype'), url('RepilicaStd-Regular.eot') format('eot?');
+  font-family: 'ReplicaStd-Regular';
+  src: url('ReplicaStd-Regular.woff') format('woff'), url('ReplicaStd-Regular.ttf') format('truetype'), url('ReplicaStd-Regular.otf') format('opentype'), url('ReplicaStd-Regular.eot') format('eot?');
 }
 
 * { margin:0; padding:0; font-family:inherit;}
