changed body text typeface
to replica standard light

--- a/res/screen.css
+++ b/res/screen.css
@@ -9,15 +9,15 @@
 }
 
 @font-face {
-  font-family: 'ReplicaStd-Regular';
-  src: url('ReplicaStd-Regular.woff') format('woff'), url('ReplicaStd-Regular.ttf') format('truetype'), url('ReplicaStd-Regular.otf') format('opentype'), url('ReplicaStd-Regular.eot') format('eot?');
+  font-family: 'ReplicaStd-Light';
+  src: url('ReplicaStd-Light.woff') format('woff'), url('ReplicaStd-Light.ttf') format('truetype'), url('ReplicaStd-Light.otf') format('opentype'), url('ReplicaStd-Light.eot') format('eot?');
 }
 
 * { margin:0; padding:0; font-family:inherit;}
 body {
   background: #fff;
   color: #222;
-  font-family: "ReplicaStd-Regular", Inconsolata, Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-family: "ReplicaStd-Light", Inconsolata, Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-size:16px;
   line-height:1.5;
 
