--- a/res/screen.css
+++ b/res/screen.css
@@ -13,6 +13,11 @@
   src: url('ReplicaStd-Light.woff') format('woff'), url('ReplicaStd-Light.ttf') format('truetype'), url('ReplicaStd-Light.otf') format('opentype'), url('ReplicaStd-Light.eot') format('eot?');
 }
 
+@font-face {
+  font-family: 'RepilicaStd-Regular';
+  src: url('RepilicaStd-Regular.woff') format('woff'), url('RepilicaStd-Regular.ttf') format('truetype'), url('RepilicaStd-Regular.otf') format('opentype'), url('RepilicaStd-Regular.eot') format('eot?');
+ }
+
 * { margin:0; padding:0; font-family:inherit;}
 body {
   background: #fff;
