added social media links
reorganized and added last fm

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,10 +83,11 @@
     <footer>
       <p>
 	<a href="https://plus.google.com/+NickUhlig"><img src="/res/google.svg" alt="Google+"></a>
+	<a href="https://www.linkedin.com/in/nickuhlig/"><img src="/res/linkedin.svg" alt="LinkedIn"></a>
 	<a href="https://www.facebook.com/gilhukcin"><img src="/res/facebook.svg" alt="Facebook"></a>
 	<a href="https://twitter.com/plcthe"><img src="/res/twitter.svg" alt="Twitter"></a>
 	<a href="https://www.instagram.com/theplc/"><img src="/res/insta.svg" alt="Instagram"></a>
-	<a href="https://www.linkedin.com/in/nickuhlig/"><img src="/res/linkedin.svg" alt="LinkedIn"></a>
+	<a href="https://www.last.fm/user/shelloflight/"><img src="/res/lastfm.svg" alt="Last.fm"></a>
       </p>
     </footer>
     {% endunless %}
