--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,6 +88,7 @@
 	<a href="https://twitter.com/plcthe"><img src="/res/twitter.svg" alt="Twitter"></a>
 	<a href="https://www.instagram.com/theplc/"><img src="/res/insta.svg" alt="Instagram"></a>
 	<a href="https://www.last.fm/user/shelloflight/"><img src="/res/lastfm.svg" alt="Last.fm"></a>
+	<a href="https://github.com/nickuhlig/"><img src="/res/github.svg" alt="Github"></a>
       </p>
     </footer>
     {% endunless %}
