--- a/res/screen.css
+++ b/res/screen.css
@@ -491,6 +491,7 @@ footer {
     border: none;
     width:1.2em;
     opacity:0.5;
+    padding-right:4px;
     -o-transition:.5s;
     -ms-transition:.5s;
     -moz-transition:.5s;
