--- a/res/screen.css
+++ b/res/screen.css
@@ -65,7 +65,7 @@ pre, code, tt {
   font-family: inherit;
 }
 
-img { border:none; vertical-align:bottom; }
+img { border:none; vertical-align:middle; }
 
 hr { height:1px; border:none; background-color:#ddd; }
 
@@ -90,7 +90,7 @@ color: inherit;
   padding-bottom:0.025em;
   background-image: linear-gradient(to bottom, rgba(0,0,0,.5) 50%, rgba(0,0,0,0) 50%);
   background-repeat: repeat-x;
-  background-size: 2px .1em;
+  background-size: 2px .2em;
   background-position: 0 1.025em;
   text-shadow: /* creates "openings" for descenders in the underline */
    -1px -1px 0 #fff,
@@ -129,6 +129,19 @@ a[href^="#"]:hover {
 
 
 a.img { border:none; background:transparent !important; }
+
+a img.hover {
+    display: none;
+}
+a img.default {
+    display: inherit;
+}
+a:hover img.hover {
+    display: inherit;
+}
+a:hover img.default {
+    display: none;
+}
 
 /* anchors: headings */
 h1 > a, h2 > a, h3 > a, h4 > a, h5 > a, h6 > a, h1 > a:hover,
