--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
   </head>
   <body{% if page.wide_layout %} class="wide"{% endif %}>
     <header{% unless page.date %} class="main"{% endunless %}>
-      <h1><a href="/"><img class="default" src="/res/logo normal.svg" height="32"><img class="hover" src="/res/logo glitch.svg" height="32"></a></h1>
+      <h1><a href="/"><img class="hover" src="/res/logo glitch.svg" height="32"></a></h1>
       <ul class="navigation">
         <!-- <li><a href="//perjuhlig.tumblr.com/" title="My wedding website">Another thing I did</a></li> -->
         <li><a href="/about/"{% if page.url contains "/about/" %}class="active"{% endif %}>About</a></li>
