--- a/res/screen.css
+++ b/res/screen.css
@@ -133,7 +133,7 @@ a.img { border:none; background:transparent !important; }
 a img.hover {
     display: inherit;
     opacity: 0;
-    background-image: url(/res/logo normal.svg);
+    background-image: url(logo normal.svg);
     background-repeat: no-repeat;
     background-size: inherit;
     -o-transition:.5s;
