--- a/res/screen.css
+++ b/res/screen.css
@@ -130,28 +130,24 @@ a[href^="#"]:hover {
 
 a.img { border:none; background:transparent !important; }
 
-a img.hover {
-    display: inherit;
-    opacity: 0;
-    background-image: url(logo normal.svg);
-    background-repeat: no-repeat;
-    background-size: inherit;
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-  /* ...and now for the proper property */
-    transition:.5s;
+#cf {
+  position:relative;
+  height:32px;
+  width:215.517px;
+  margin:0;
 }
-a img.default {
-    display: inherit;
+
+#cf img {
+  position:absolute;
+  left:0;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -moz-transition: opacity 0.5s ease-in-out;
+  -o-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
 }
-a:hover img.hover {
-    display: inherit;
-    opacity: 1;
-}
-a:hover img.default {
-    display: none;
+
+#cf img.top:hover {
+  opacity:0;
 }
 
 /* anchors: headings */
