--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
   </head>
   <body{% if page.wide_layout %} class="wide"{% endif %}>
     <header{% unless page.date %} class="main"{% endunless %}>
-	    <div id="cf"><a href="/"><img class="bottom" src="/res/logo normal.svg"><img class="top" src="/res/logo glitch.svg"></a></div>
+	    <div id="cf"><a href="/"><img class="bottom" src="/res/logo glitch.svg" height="32px"><img class="top" src="/res/logo normal.svg" height="32px"></a></div>
       <ul class="navigation">
         <!-- <li><a href="//perjuhlig.tumblr.com/" title="My wedding website">Another thing I did</a></li> -->
         <li><a href="/about/"{% if page.url contains "/about/" %}class="active"{% endif %}>About</a></li>
