--- a/res/screen.css
+++ b/res/screen.css
@@ -132,7 +132,7 @@ a.img { border:none; background:transparent !important; }
 
 #cf {
   position:relative;
-  height:36;
+  height:36px;
   width:300px;
   margin: auto 0;
 }
