--- a/res/screen.css
+++ b/res/screen.css
@@ -148,6 +148,7 @@ a.img { border:none; background:transparent !important; }
 
 #cf img.top:hover {
   opacity:0;
+  cursor: pointer;
 }
 
 /* anchors: headings */
