max height for #cf img
36 px

--- a/res/screen.css
+++ b/res/screen.css
@@ -139,6 +139,7 @@ a.img { border:none; background:transparent !important; }
 
 #cf img {
   position:absolute;
+  max-height:36px;
     left:0;
   -webkit-transition: opacity 0.5s ease-in-out;
   -moz-transition: opacity 0.5s ease-in-out;
