--- a/res/screen.css
+++ b/res/screen.css
@@ -128,7 +128,7 @@ a[href^="#"]:hover {
 }
 
 
-a.img { border:none; background:transparent !important; }
+a.img { display:block; border:none; background:transparent !important; }
 
 #cf {
   position:relative;
@@ -140,6 +140,7 @@ a.img { border:none; background:transparent !important; }
 #cf img {
   position:absolute;
   max-height:36px;
+  margin: auto 0;
     left:0;
   -webkit-transition: opacity 0.5s ease-in-out;
   -moz-transition: opacity 0.5s ease-in-out;
