--- a/res/screen.css
+++ b/res/screen.css
@@ -140,7 +140,7 @@ a.img { display:block; border:none; background:transparent !important; }
 #cf img {
   position:absolute;
   max-height:36px;
-  margin: auto 0;
+  vertical=align:middle;
     left:0;
   -webkit-transition: opacity 0.5s ease-in-out;
   -moz-transition: opacity 0.5s ease-in-out;
