--- a/res/screen.css
+++ b/res/screen.css
@@ -141,7 +141,7 @@ a.img { border:none; background:transparent !important; }
   position:absolute;
   max-height:36px;
   display:block;
-  vertical=align:middle;
+  margin: auto 0;
     left:0;
   -webkit-transition: opacity 0.5s ease-in-out;
   -moz-transition: opacity 0.5s ease-in-out;
