--- a/res/screen.css
+++ b/res/screen.css
@@ -139,7 +139,7 @@ a.img { border:none; background:transparent !important; }
 
 #cf img {
   position:absolute;
-  max-height:36px;
+  max-height:99%;
   display:block;
   margin: auto 0;
     left:0;
