--- a/res/screen.css
+++ b/res/screen.css
@@ -132,15 +132,13 @@ a.img { border:none; background:transparent !important; }
 
 #cf {
   position:relative;
-  height:36px;
-  line-height: 36px;
+  height:50%;
   width:300px;
   margin: auto 0;
 }
 
 #cf img {
-  vertical-align:middle;
-  max-height:36px;
+  max-height:100%;
   left:0;
   -webkit-transition: opacity 0.5s ease-in-out;
   -moz-transition: opacity 0.5s ease-in-out;
