--- a/res/screen.css
+++ b/res/screen.css
@@ -138,6 +138,7 @@ a.img { border:none; background:transparent !important; }
 }
 
 #cf img {
+  position:absolute;
   max-height:100%;
   left:0;
   -webkit-transition: opacity 0.5s ease-in-out;
