--- a/res/screen.css
+++ b/res/screen.css
@@ -132,14 +132,14 @@ a.img { border:none; background:transparent !important; }
 
 #cf {
   position:relative;
-  height:5vw;
+  height:36px;
   width:300px;
   margin: auto 0;
 }
 
 #cf img {
   position:absolute;
-  max-height:100%;
+  max-height:36px;
   left:0;
   -webkit-transition: opacity 0.5s ease-in-out;
   -moz-transition: opacity 0.5s ease-in-out;
