--- a/res/screen.css
+++ b/res/screen.css
@@ -133,14 +133,15 @@ a.img { border:none; background:transparent !important; }
 #cf {
   position:relative;
   height:36px;
-  width:300px;
+  width:50%;
+  max-width:300px;
   margin: auto 0;
 }
 
 #cf img {
   position:absolute;
   max-height:36px;
-  left:0;
+  left:0%;
   -webkit-transition: opacity 0.5s ease-in-out;
   -moz-transition: opacity 0.5s ease-in-out;
   -o-transition: opacity 0.5s ease-in-out;
