changed max width for #cf in mobile rules
reduce to max 64 px to prevent issues with alignment in opera/firefox

--- a/res/screen.css
+++ b/res/screen.css
@@ -157,6 +157,7 @@ a.img { border:none; background:transparent !important; }
 @media only screen and (max-width: 600px) {
 .mobile {display:inherit}
 .desktop {display:none}
+#cf {max-width:64px}
 }
 
 /* Special Rules for Tablets */
