--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link rel="stylesheet" media="all" href="/res/screen.css?v={{ build_version }}" type="text/css">
     <link rel="alternate" type="application/atom+xml" title="Rasmus Andersson" href="/atom.xml">
-    <link rel="shortcut icon" href="/res/platonics/tetrahedron.ico?v={{ build_version }}">
-    <link rel="icon" type="image/png" sizes="any" href="/res/platonics/tetrahedron.png?v={{ build_version }}">
-    <link rel="apple-touch-icon" href="/res/platonics/tetrahedron.png?v={{ build_version }}">
+    <link rel="shortcut icon" href="/favicon.ico?v={{ build_version }}">
+    <link rel="icon" type="image/ico" sizes="any" href="/favicon.ico?v={{ build_version }}">
+    <link rel="apple-touch-icon" href="/favicon.ico?v={{ build_version }}">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@plcthe">
     <meta name="twitter:creator" content="@plcthe">
