change cf img placement
-10 px

--- a/res/screen.css
+++ b/res/screen.css
@@ -141,7 +141,7 @@ a.img { border:none; background:transparent !important; }
 #cf img {
   position:absolute;
   max-height:36px;
-  left:0%;
+  left:-10px;
   -webkit-transition: opacity 0.25s ease-in-out;
   -moz-transition: opacity 0.25s ease-in-out;
   -o-transition: opacity 0.25s ease-in-out;
